--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "author": "Yanuka Deneth",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/builders": "^0.12.0",
-    "@discordjs/rest": "^0.3.0",
+    "@discordjs/rest": "^1.0.1",
     "axios": "^0.26.1",
-    "discord-api-types": "^0.27.1",
-    "discord-rpc": "^4.0.1",
-    "discord.js": "^13.6.0",
-    "discordbot": "^0.0.21",
-    "dotenv": "^16.0.1"
+    "discord-api-types": "^0.37.3",
+    "discord.js": "^14.2.0",
+    "dotenv": "^16.0.1",
+    "ethers": "^5.7.0"
   }
 }
