--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows
+
+# Configuration File
+config.json
