--- a/example.config.json
+++ b/example.config.json
@@ -1,31 +1,39 @@
 {
   "bot": {
     "clientId": "00000000000000",
-    "guildId": "00000000000000000000",
-    "token": "xxxxxxxxxxxxx"
+    "guildId": "00000000000000",
+    "token": "xxxxxxxxx"
   },
   "channels": {
-    "feedback": "0000000000000000",
-    "log": "000000000000000"
+    "feedback": "00000000000000",
+    "log": "00000000000000"
   },
-  "roles": [
-    {
-      "name": "Admin",
-      "id": "000000000000000000"
+  "roles": {
+    "admin": {
+      "id": "00000000000000"
     }
-  ],
-  "networks": [
-    {
-      "name": "goerli",
-      "native-currency": "ETH",
-      "ALCHEMY_URL": "https://eth-goerli.g.alchemy.com/v2/xxxxxxxxxxxx",
-      "INFURA_URL": ""
+  },
+  "networks": {
+    "goerli": {
+      "nativeCurrency": "eth",
+      "ALCHEMY_URL": "https://eth-goerli.g.alchemy.com/v2/xxxxxx"
+    },
+    "rinkeby": {
+      "nativeCurrency": "eth",
+      "ALCHEMY_URL": "https://eth-rinkeby.alchemyapi.io/v2/xxxxxxx"
+    },
+    "mumbai": {
+      "nativeCurrency": "matic",
+      "ALCHEMY_URL": "https://polygon-mumbai.g.alchemy.com/v2/xxxxxxx"
     }
-  ],
-  "tokens": [
-    {
-      "name": "eth",
-      "contract-address": ""
+  },
+  "tokens": {
+    "link": {
+      "contractAddress": "xxxxxxxxx"
     }
-  ]
+  },
+
+  "stats": {
+    "walletAddress": "xxxxxxxx"
+  }
 }
