--- a/example.config.json
+++ b/example.config.json
@@ -1,30 +1,30 @@
 {
   "bot": {
-    "clientId": "00000000000000",
-    "guildId": "00000000000",
-    "token": "xxxxxxxxxxxxx"
+    "clientId": "0000000000000000",
+    "guildId": "0000000000000000",
+    "token": "xxxx"
   },
   "channels": {
-    "feedback": "00000000000",
-    "log": "00000000000"
+    "feedback": "0000000000000000",
+    "log": "0000000000000000"
   },
   "roles": {
     "admin": {
-      "id": "000000000000000"
+      "id": "0000000000000000"
     }
   },
   "networks": {
     "goerli": {
       "nativeCurrency": "eth",
-      "ALCHEMY_URL": "https://eth-goerli.g.alchemy.com/v2/xxxxxxxxxxx"
+      "ALCHEMY_URL": "https://eth-goerli.g.alchemy.com/v2/xxxxx"
     },
     "rinkeby": {
       "nativeCurrency": "eth",
-      "ALCHEMY_URL": "https://eth-rinkeby.alchemyapi.io/v2/xxxxxxxxxx"
+      "ALCHEMY_URL": "https://eth-rinkeby.alchemyapi.io/v2/xxxxx"
     },
     "mumbai": {
       "nativeCurrency": "matic",
-      "ALCHEMY_URL": "https://polygon-mumbai.g.alchemy.com/v2/xxxxxxxxxxxx"
+      "ALCHEMY_URL": "https://polygon-mumbai.g.alchemy.com/v2/xxxxx"
     }
   },
   "tokens": {
@@ -35,6 +35,8 @@
     }
   },
   "stats": {
-    "walletAddress": "xxxxxx"
+    "walletAddress": "xxxx",
+    "ALCHEMY_KEY": "xxxxx",
+    "walletPrivateKey": "xxxx"
   }
 }
