--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "discord.js": "^14.2.0",
     "dotenv": "^16.0.1",
     "ethers": "^5.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
