--- a/example.config.json
+++ b/example.config.json
@@ -1,43 +1,45 @@
 {
   "bot": {
-    "clientId": "0000000000000000",
-    "guildId": "0000000000000000",
-    "token": "xxxx"
+    "clientId": "0000000000000",
+    "guildId": "0000000000000"
   },
   "channels": {
-    "feedback": "0000000000000000",
-    "log": "0000000000000000"
+    "feedback": "0000000000000",
+    "log": "0000000000000",
+    "error": "0000000000000"
   },
-  "roles": {
-    "admin": {
-      "id": "0000000000000000"
-    }
-  },
+  "bypassRoles": ["0000000000000"],
   "networks": {
     "goerli": {
       "nativeCurrency": "eth",
-      "ALCHEMY_URL": "https://eth-goerli.g.alchemy.com/v2/xxxxx"
+      "ALCHEMY_URL": "https://eth-goerli.g.alchemy.com/v2/xxxxxxxxxxxx"
     },
     "rinkeby": {
       "nativeCurrency": "eth",
-      "ALCHEMY_URL": "https://eth-rinkeby.alchemyapi.io/v2/xxxxx"
+      "ALCHEMY_URL": "https://eth-rinkeby.alchemyapi.io/v2/xxxxxxxxxxx"
     },
     "mumbai": {
       "nativeCurrency": "matic",
-      "ALCHEMY_URL": "https://polygon-mumbai.g.alchemy.com/v2/xxxxx"
+      "ALCHEMY_URL": "https://polygon-mumbai.g.alchemy.com/v2/xxxxxxxxx"
     }
   },
   "tokens": {
     "link": {
+      "amount": 10,
       "goerli": "0x326C977E6efc84E512bB9C30f76E30c160eD06FB",
       "rinkeby": "0x01BE23585060835E02B77ef475b0Cc51aA1e0709",
       "mumbai": "0x326C977E6efc84E512bB9C30f76E30c160eD06FB"
     }
   },
   "stats": {
-    "walletAddress": "xxxx",
-    "ALCHEMY_KEY": "xxxxx",
-    "walletPrivateKey": "xxxx",
-    "dailyEth": 1
+    "walletAddress": "xxxxxxxx",
+    "dailyEth": 1,
+    "maxFee": 95000000000,
+    "coolDownTime": 60000,
+    "feedbackCoolDown": 60000
+  },
+  "secrets": {
+    "walletPrivateKey": "xxxxxxxxx",
+    "BotToken": "xxxxxx"
   }
 }
