Made keyv set after confirmation. Added nonce limiter

--- a/example.config.json
+++ b/example.config.json
@@ -35,8 +35,9 @@
     "walletAddress": "xxxxxxxx",
     "dailyEth": 1,
     "maxFee": 95000000000,
-    "coolDownTime": 60000,
-    "feedbackCoolDown": 60000
+    "coolDownTime": 120000,
+    "feedbackCoolDown": 200000,
+    "globalCoolDown": 60000
   },
   "secrets": {
     "walletPrivateKey": "xxxxxxxxx",
