--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "discord-faucet-bot",
   "version": "1.0.0",
-  "description": "Discord Faucet Bot to let people collect testnet currency tokens.",
+  "description": "Discord Faucet Bot to let people request for Testnet tokens",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev_local": "set NODE_ENV=development && nodemon index.js",
-    "dev": "NODE_ENV=development node index.js",
-    "prod": "NODE_ENV=production node index.js"
+    "start": "ts-node src/index.ts",
+    "start:dev": "ts-node-dev src/index.ts",
+    "start:prod": "node dist/index.js",
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "author": "Yanuka Deneth",
   "license": "MIT",
+  "keywords": [
+    "faucet",
+    "bot",
+    "learnweb3dao",
+    "learnweb3"
+  ],
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
     "discord-api-types": "^0.37.3",
@@ -18,5 +25,12 @@
     "dotenv": "^16.0.1",
     "ethers": "^5.7.0",
     "keyv": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/glob": "^8.0.0",
+    "@types/node": "^18.11.9",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
