--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   }
 }
