--- a/package.json
+++ b/package.json
@@ -1,37 +1,55 @@
 {
-  "name": "discord-faucet-bot",
-  "version": "1.0.0",
-  "description": "Discord Faucet Bot to let people request for Testnet tokens",
-  "main": "index.js",
-  "scripts": {
-    "start": "ts-node src/index.ts",
-    "start:dev": "ts-node-dev src/index.ts",
-    "start:prod": "node dist/index.js",
-    "build": "tsc",
-    "watch": "tsc -w"
-  },
-  "author": "Yanuka Deneth",
-  "license": "MIT",
-  "keywords": [
-    "faucet",
-    "bot",
-    "learnweb3dao",
-    "learnweb3"
-  ],
-  "dependencies": {
-    "@discordjs/rest": "^1.0.1",
-    "discord-api-types": "^0.37.3",
-    "discord.js": "^14.2.0",
-    "dotenv": "^16.0.1",
-    "ethers": "^5.7.0",
-    "keyv": "^4.4.1"
-  },
-  "devDependencies": {
-    "@types/glob": "^8.0.0",
-    "@types/node": "^18.11.9",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "tslib": "^2.4.1",
-    "typescript": "^4.8.4"
-  }
+	"name": "discord-faucet-bot",
+	"version": "1.0.0",
+	"description": "Discord Faucet Bot to let people request for Testnet tokens",
+	"main": "index.js",
+	"engines": {
+		"node": ">=16.9.0"
+	},
+	"type": "module",
+	"exports": [
+		"./dist/start-bot.js",
+		"./dist/start-manager.js"
+	],
+	"scripts": {
+		"lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
+		"lint:fix": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx",
+		"format": "prettier --check .",
+		"format:fix": "prettier --write .",
+		"start": "ts-node src/index.ts",
+		"start:dev": "ts-node-dev src/index.ts",
+		"start:prod": "node dist/index.js",
+		"build": "tsc",
+		"watch": "tsc -w"
+	},
+	"author": "Yanuka Deneth",
+	"license": "MIT",
+	"keywords": [
+		"faucet",
+		"bot",
+		"learnweb3dao",
+		"learnweb3"
+	],
+	"dependencies": {
+		"@discordjs/rest": "^1.0.1",
+		"discord-api-types": "^0.37.3",
+		"discord.js": "^14.2.0",
+		"dotenv": "^16.0.1",
+		"ethers": "^5.7.0",
+		"keyv": "^4.4.1"
+	},
+	"devDependencies": {
+		"@types/glob": "^8.0.0",
+		"@types/node": "^18.11.9",
+		"@typescript-eslint/eslint-plugin": "^5.42.1",
+		"@typescript-eslint/parser": "^5.42.1",
+		"eslint": "^8.27.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-unicorn": "^44.0.2",
+		"prettier": "^2.7.1",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0",
+		"tslib": "^2.4.1",
+		"typescript": "^4.8.4"
+	}
 }
