--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,7 +51,16 @@
 				"propertyDeclaration": true
 			}
 		],
-		"import/extensions": ["error", "ignorePackages"],
+		"import/extensions": [
+			"error",
+			"ignorePackages",
+			{
+				"js": "never",
+				"jsx": "never",
+				"ts": "never",
+				"tsx": "never"
+			}
+		],
 		"import/no-extraneous-dependencies": "error",
 		"import/no-unresolved": "off",
 		"import/no-useless-path-segments": "error",
