Squashed commit of the following:
commit 9892282186e7e2ce4546392f3d746c7f049ffc8e
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 11:35:58 2022 +0530

    Edited example config

commit 11dd6825aae8c95efc33a1b1315fd16e51874148
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 11:31:48 2022 +0530

    Edited README

commit 1b897a12dd8b85674020a2ff9219bb44603020b6
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 11:22:18 2022 +0530

    Typescript work is complete

commit 1cd25e10c9eaffe11c534130efd2bf366b14f6b8
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 11:11:00 2022 +0530

    Worked on the Responces

commit b7f73a80668a04165ce1c9153e3a5516b5ea45d8
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 11:06:01 2022 +0530

    Worked on Faucet Responce

commit e874fc5c2a51b86a8c8bd91de5daa46058cd39b6
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 10:22:20 2022 +0530

    Worked on Balance

commit cbf7cc06913b19fbe6b629fd0d800b28995fda4c
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 09:34:48 2022 +0530

    Worked on Events and Config File

commit 126777255c0890adbc065ff7ce2ac14d277abf20
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 09:21:46 2022 +0530

    Worked on the commands

commit 2fce101cdddd2c6873aeb2b7d7ba1b0e362f54b6
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 09:17:28 2022 +0530

    Changed Config Structure and worked on dynamic options

commit 33421ba0cbcc34f81ea95159206716efe312bd50
Author: YASHURA <61384503+yanukadeneth99@users.noreply.github.com>
Date:   Mon Nov 14 01:33:05 2022 +0530

    Fixed issue with bot failing

commit df8ff12cd57ababcd33248f9951266c73a55b277
Author: YASHURA <61384503+yanukadeneth99@users

--- a/package.json
+++ b/package.json
@@ -1,22 +1,52 @@
 {
-  "name": "discord-faucet-bot",
-  "version": "1.0.0",
-  "description": "Discord Faucet Bot to let people collect testnet currency tokens.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev_local": "set NODE_ENV=development && nodemon index.js",
-    "dev": "NODE_ENV=development node index.js",
-    "prod": "NODE_ENV=production node index.js"
-  },
-  "author": "Yanuka Deneth",
-  "license": "MIT",
-  "dependencies": {
-    "@discordjs/rest": "^1.0.1",
-    "discord-api-types": "^0.37.3",
-    "discord.js": "^14.2.0",
-    "dotenv": "^16.0.1",
-    "ethers": "^5.7.0",
-    "keyv": "^4.4.1"
-  }
+	"name": "discord-faucet-bot",
+	"version": "1.0.0",
+	"description": "Discord Faucet Bot to let people request for Testnet tokens",
+	"main": "index.js",
+	"engines": {
+		"node": ">=16.9.0"
+	},
+	"scripts": {
+		"lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
+		"lint:fix": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx",
+		"format": "prettier --check .",
+		"format:fix": "prettier --write .",
+		"start": "ts-node src/index.ts",
+		"start:dev": "ts-node-dev src/index.ts",
+		"start:prod": "tsc && node dist/deploy-commands.js && node dist/index.js",
+		"build": "tsc",
+		"bot:addcommands": "ts-node src/deploy-commands.ts",
+		"bot:deletecommands": "ts-node src/delete-commands.ts"
+	},
+	"author": "Yanuka Deneth",
+	"license": "MIT",
+	"keywords": [
+		"faucet",
+		"bot",
+		"learnweb3dao",
+		"learnweb3"
+	],
+	"dependencies": {
+		"@celo-tools/celo-ethers-wrapper": "^0.3.0",
+		"@discordjs/rest": "^1.3.0",
+		"discord-api-types": "^0.37.17",
+		"discord.js": "^14.6.0",
+		"dotenv": "^16.0.3",
+		"ethers": "^5.7.2",
+		"keyv": "^4.5.2"
+	},
+	"devDependencies": {
+		"@types/glob": "^8.0.0",
+		"@types/node": "^18.11.9",
+		"@typescript-eslint/eslint-plugin": "^5.42.1",
+		"@typescript-eslint/parser": "^5.42.1",
+		"eslint": "^8.27.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-unicorn": "^44.0.2",
+		"prettier": "^2.7.1",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0",
+		"tslib": "^2.4.1",
+		"typescript": "^4.8.4"
+	}
 }
