L1 faucet ready for testing

--- a/.gitignore
+++ b/.gitignore
@@ -171,4 +171,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/node,windows
 
 # Configuration File
-config.json
+# config.json
