--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 		"skipLibCheck": true,
 		"skipDefaultLibCheck": true,
 		"resolveJsonModule": true,
-		"importHelpers": true
+		"importHelpers": true,
+		"allowJs": true
 	},
 	"include": ["src", "environment.d.ts"],
 	"exclude": ["node_modules", "**/*.spec.ts"]
